hphp/hack/test/reserved/enum_class.php.hh.exp
File "enum_class.php--Arraykey.php", line 2, characters 12-19:
`Arraykey` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--Bool.php", line 2, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--Callable.php", line 2, characters 12-19:
`Callable` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--Dynamic.php", line 2, characters 12-18:
`Dynamic` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--False.php", line 2, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--Float.php", line 2, characters 12-16:
`Float` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--Int.php", line 2, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--Mixed.php", line 2, characters 12-16:
`Mixed` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--NArraykey.php", line 3, characters 12-19:
`Arraykey` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--NBool.php", line 3, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--NCallable.php", line 3, characters 12-19:
`Callable` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--NDynamic.php", line 3, characters 12-18:
`Dynamic` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--NFalse.php", line 3, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--NFloat.php", line 3, characters 12-16:
`Float` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--NInt.php", line 3, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--NMixed.php", line 3, characters 12-16:
`Mixed` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--NNonnull.php", line 3, characters 12-18:
`Nonnull` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--NNoreturn.php", line 3, characters 12-19:
`Noreturn` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--NNothing.php", line 3, characters 12-18:
`Nothing` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--NNull.php", line 3, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--NNum.php", line 3, characters 12-14:
`Num` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--NParent.php", line 3, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--NResource.php", line 3, characters 12-19:
`Resource` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--NSelf.php", line 3, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--NString.php", line 3, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--NThis.php", line 3, characters 12-15:
`This` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--NTrue.php", line 3, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--NVoid.php", line 3, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--N_.php", line 3, characters 12-12:
`_` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--Nonnull.php", line 2, characters 12-18:
`Nonnull` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--Noreturn.php", line 2, characters 12-19:
`Noreturn` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--Nothing.php", line 2, characters 12-18:
`Nothing` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--Null.php", line 2, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--Num.php", line 2, characters 12-14:
`Num` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--Parent.php", line 2, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--Resource.php", line 2, characters 12-19:
`Resource` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--Self.php", line 2, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--String.php", line 2, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--This.php", line 2, characters 12-15:
`This` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--True.php", line 2, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--Void.php", line 2, characters 12-12:
A name is expected here. (Parsing[1002])
File "enum_class.php--_.php", line 2, characters 12-12:
`_` cannot be used as it is reserved. (Naming[2068])
File "enum_class.php--Arraykey.php", line 2, characters 12-19:
Unbound name: `Arraykey` (an object type) (Naming[2049])
File "enum_class.php--Arraykey.php", line 2, characters 12-19:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--Arraykey.php", line 2, characters 12-19:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--Callable.php", line 2, characters 12-19:
Unbound name: `Callable` (an object type) (Naming[2049])
File "enum_class.php--Callable.php", line 2, characters 12-19:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--Callable.php", line 2, characters 12-19:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--Classname.php", line 2, characters 12-20:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--Classname.php", line 2, characters 12-20:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--Darray.php", line 2, characters 12-17:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--Darray.php", line 2, characters 12-17:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--Dynamic.php", line 2, characters 12-18:
Unbound name: `Dynamic` (an object type) (Naming[2049])
File "enum_class.php--Dynamic.php", line 2, characters 12-18:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--Dynamic.php", line 2, characters 12-18:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--Float.php", line 2, characters 12-16:
Unbound name: `Float` (an object type) (Naming[2049])
File "enum_class.php--Float.php", line 2, characters 12-16:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--Float.php", line 2, characters 12-16:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--Foo.php", line 2, characters 12-14:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--Foo.php", line 2, characters 12-14:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--Mixed.php", line 2, characters 12-16:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--Mixed.php", line 2, characters 12-16:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--Mixed.php", line 2, characters 12-16:
Unbound name: `Mixed` (an object type) (Naming[2049])
File "enum_class.php--NArraykey.php", line 3, characters 12-19:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NArraykey.php", line 3, characters 12-19:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--NArraykey.php", line 3, characters 12-19:
Unbound name: `N\Arraykey` (an object type) (Naming[2049])
File "enum_class.php--NCallable.php", line 3, characters 12-19:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NCallable.php", line 3, characters 12-19:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--NCallable.php", line 3, characters 12-19:
Unbound name: `N\Callable` (an object type) (Naming[2049])
File "enum_class.php--NClassname.php", line 3, characters 12-20:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NClassname.php", line 3, characters 12-20:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--NDarray.php", line 3, characters 12-17:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NDarray.php", line 3, characters 12-17:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--NDynamic.php", line 3, characters 12-18:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NDynamic.php", line 3, characters 12-18:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--NDynamic.php", line 3, characters 12-18:
Unbound name: `N\Dynamic` (an object type) (Naming[2049])
File "enum_class.php--NFloat.php", line 3, characters 12-16:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NFloat.php", line 3, characters 12-16:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--NFloat.php", line 3, characters 12-16:
Unbound name: `N\Float` (an object type) (Naming[2049])
File "enum_class.php--NFoo.php", line 3, characters 12-14:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NFoo.php", line 3, characters 12-14:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--NMixed.php", line 3, characters 12-16:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NMixed.php", line 3, characters 12-16:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--NMixed.php", line 3, characters 12-16:
Unbound name: `N\Mixed` (an object type) (Naming[2049])
File "enum_class.php--NNonnull.php", line 3, characters 12-18:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NNonnull.php", line 3, characters 12-18:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--NNonnull.php", line 3, characters 12-18:
Unbound name: `N\Nonnull` (an object type) (Naming[2049])
File "enum_class.php--NNoreturn.php", line 3, characters 12-19:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NNoreturn.php", line 3, characters 12-19:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--NNoreturn.php", line 3, characters 12-19:
Unbound name: `N\Noreturn` (an object type) (Naming[2049])
File "enum_class.php--NNothing.php", line 3, characters 12-18:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NNothing.php", line 3, characters 12-18:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--NNothing.php", line 3, characters 12-18:
Unbound name: `N\Nothing` (an object type) (Naming[2049])
File "enum_class.php--NNum.php", line 3, characters 12-14:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NNum.php", line 3, characters 12-14:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--NNum.php", line 3, characters 12-14:
Unbound name: `N\Num` (an object type) (Naming[2049])
File "enum_class.php--NResource.php", line 3, characters 12-19:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NResource.php", line 3, characters 12-19:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--NResource.php", line 3, characters 12-19:
Unbound name: `N\Resource` (an object type) (Naming[2049])
File "enum_class.php--NThis.php", line 3, characters 12-15:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NThis.php", line 3, characters 12-15:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--NThis.php", line 3, characters 12-15:
Unbound name: `N\This` (an object type) (Naming[2049])
File "enum_class.php--NVarray.php", line 3, characters 12-17:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--NVarray.php", line 3, characters 12-17:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--N_.php", line 3, characters 12-12:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--N_.php", line 3, characters 12-12:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--N_.php", line 3, characters 12-12:
Unbound name: `N\_` (an object type) (Naming[2049])
File "enum_class.php--Nonnull.php", line 2, characters 12-18:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--Nonnull.php", line 2, characters 12-18:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--Nonnull.php", line 2, characters 12-18:
Unbound name: `Nonnull` (an object type) (Naming[2049])
File "enum_class.php--Noreturn.php", line 2, characters 12-19:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--Noreturn.php", line 2, characters 12-19:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--Noreturn.php", line 2, characters 12-19:
Unbound name: `Noreturn` (an object type) (Naming[2049])
File "enum_class.php--Nothing.php", line 2, characters 12-18:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--Nothing.php", line 2, characters 12-18:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--Nothing.php", line 2, characters 12-18:
Unbound name: `Nothing` (an object type) (Naming[2049])
File "enum_class.php--Num.php", line 2, characters 12-14:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--Num.php", line 2, characters 12-14:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--Num.php", line 2, characters 12-14:
Unbound name: `Num` (an object type) (Naming[2049])
File "enum_class.php--Resource.php", line 2, characters 12-19:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--Resource.php", line 2, characters 12-19:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--Resource.php", line 2, characters 12-19:
Unbound name: `Resource` (an object type) (Naming[2049])
File "enum_class.php--This.php", line 2, characters 12-15:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--This.php", line 2, characters 12-15:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--This.php", line 2, characters 12-15:
Unbound name: `This` (an object type) (Naming[2049])
File "enum_class.php--Varray.php", line 2, characters 12-17:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--Varray.php", line 2, characters 12-17:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--_.php", line 2, characters 12-12:
Unbound name: `HH\BuiltinEnumClass` (an object type) (Naming[2049])
File "enum_class.php--_.php", line 2, characters 12-12:
Unbound name: `HH\MemberOf` (an object type) (Naming[2049])
File "enum_class.php--_.php", line 2, characters 12-12:
Unbound name: `_` (an object type) (Naming[2049])
