hphp/hack/test/reserved/enum_class.php
//// Foo.php
<?hh
enum class Foo : int {}

//// Arraykey.php
<?hh
enum class Arraykey : int {}

//// Bool.php
<?hh
enum class Bool : int {}

//// Callable.php
<?hh
enum class Callable : int {}

//// Classname.php
<?hh
enum class Classname : int {}

//// Darray.php
<?hh
enum class Darray : int {}

//// Dynamic.php
<?hh
enum class Dynamic : int {}

//// False.php
<?hh
enum class False : int {}

//// Float.php
<?hh
enum class Float : int {}

//// Int.php
<?hh
enum class Int : int {}

//// Mixed.php
<?hh
enum class Mixed : int {}

//// Nonnull.php
<?hh
enum class Nonnull : int {}

//// Noreturn.php
<?hh
enum class Noreturn : int {}

//// Nothing.php
<?hh
enum class Nothing : int {}

//// Null.php
<?hh
enum class Null : int {}

//// Num.php
<?hh
enum class Num : int {}

//// Parent.php
<?hh
enum class Parent : int {}

//// Resource.php
<?hh
enum class Resource : int {}

//// Self.php
<?hh
enum class Self : int {}

//// String.php
<?hh
enum class String : int {}

//// This.php
<?hh
enum class This : int {}

//// True.php
<?hh
enum class True : int {}

//// Varray.php
<?hh
enum class Varray : int {}

//// Void.php
<?hh
enum class Void : int {}

//// _.php
<?hh
enum class _ : int {}

//// NFoo.php
<?hh
namespace N;
enum class Foo : int {}

//// NArraykey.php
<?hh
namespace N;
enum class Arraykey : int {}

//// NBool.php
<?hh
namespace N;
enum class Bool : int {}

//// NCallable.php
<?hh
namespace N;
enum class Callable : int {}

//// NClassname.php
<?hh
namespace N;
enum class Classname : int {}

//// NDarray.php
<?hh
namespace N;
enum class Darray : int {}

//// NDynamic.php
<?hh
namespace N;
enum class Dynamic : int {}

//// NFalse.php
<?hh
namespace N;
enum class False : int {}

//// NFloat.php
<?hh
namespace N;
enum class Float : int {}

//// NInt.php
<?hh
namespace N;
enum class Int : int {}

//// NMixed.php
<?hh
namespace N;
enum class Mixed : int {}

//// NNonnull.php
<?hh
namespace N;
enum class Nonnull : int {}

//// NNoreturn.php
<?hh
namespace N;
enum class Noreturn : int {}

//// NNothing.php
<?hh
namespace N;
enum class Nothing : int {}

//// NNull.php
<?hh
namespace N;
enum class Null : int {}

//// NNum.php
<?hh
namespace N;
enum class Num : int {}

//// NParent.php
<?hh
namespace N;
enum class Parent : int {}

//// NResource.php
<?hh
namespace N;
enum class Resource : int {}

//// NSelf.php
<?hh
namespace N;
enum class Self : int {}

//// NString.php
<?hh
namespace N;
enum class String : int {}

//// NThis.php
<?hh
namespace N;
enum class This : int {}

//// NTrue.php
<?hh
namespace N;
enum class True : int {}

//// NVarray.php
<?hh
namespace N;
enum class Varray : int {}

//// NVoid.php
<?hh
namespace N;
enum class Void : int {}

//// N_.php
<?hh
namespace N;
enum class _ : int {}
